Fixed issue with overflow

--- a/public/css/admin.css
+++ b/public/css/admin.css
@@ -2988,15 +2988,6 @@ select{
 .min-w-\[2rem\]{
   min-width: 2rem;
 }
-.min-w-\[60rem\]{
-  min-width: 60rem;
-}
-.min-w-\[10rem\]{
-  min-width: 10rem;
-}
-.max-w-2xl{
-  max-width: 42rem;
-}
 .max-w-lg{
   max-width: 32rem;
 }
@@ -3011,6 +3002,9 @@ select{
 }
 .max-w-xl{
   max-width: 36rem;
+}
+.max-w-2xl{
+  max-width: 42rem;
 }
 .max-w-3xl{
   max-width: 48rem;
@@ -3328,9 +3322,6 @@ select{
 .overflow-hidden{
   overflow: hidden;
 }
-.overflow-scroll{
-  overflow: scroll;
-}
 .overflow-x-auto{
   overflow-x: auto;
 }
@@ -3486,6 +3477,10 @@ select{
 .bg-black\/50{
   background-color: rgb(0 0 0 / 0.5);
 }
+.bg-gray-50{
+  --tw-bg-opacity: 1;
+  background-color: rgb(249 250 251 / var(--tw-bg-opacity));
+}
 .bg-primary-500\/10{
   background-color: rgb(59 130 246 / 0.1);
 }
@@ -3520,10 +3515,6 @@ select{
 }
 .bg-white\/50{
   background-color: rgb(255 255 255 / 0.5);
-}
-.bg-gray-50{
-  --tw-bg-opacity: 1;
-  background-color: rgb(249 250 251 / var(--tw-bg-opacity));
 }
 .bg-transparent{
   background-color: transparent;
@@ -5431,12 +5422,12 @@ select{
     display: none;
   }
 
-  .lg\:min-w-\[24rem\]{
-    min-width: 24rem;
-  }
-
   .lg\:min-w-\[60rem\]{
     min-width: 60rem;
+  }
+
+  .lg\:min-w-\[24rem\]{
+    min-width: 24rem;
   }
 
   .lg\:max-w-\[20em\]{
